--- a/checkin4you/Client/Shared/NavMenu.razor
+++ b/checkin4you/Client/Shared/NavMenu.razor
@@ -1,39 +1,61 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">checkin4you</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+﻿@inject NavigationManager NavigationManager
+
+<div class="sidebar @NavMenuCssClass">
+    
+    <nav class="flex-column">
+        <div class="d-flex flex-row align-items-center mt-3 ms-3 nav-link">
+            <div class="d-flex flex-row align-items-center" @onclick="NavigateToHome">
+                <RadzenIcon Icon="home" Style="color: white; font-size: 2.5rem" />
+                <span class="label @CollapseLabelCssClass">Startseite</span>
+            </div>
+            @if(!collapseNavMenu)
+            {
+                <div class="d-flex flex-row align-items-center ms-auto me-3">
+                    <RadzenIcon Icon="@CollapseIconCssClass" Style="color: white; font-size: 2.5rem" @onclick="ToggleNavMenu" />
+                </div>
+            }
+        </div>
+        @if (collapseNavMenu)
+        {
+            <div class="d-flex flex-row align-items-center mt-3 ms-3 nav-link">
+                <RadzenIcon Icon="@CollapseIconCssClass" Style="color: white; font-size: 2.5rem" @onclick="ToggleNavMenu" />
+            </div>
+        }
+    </nav>
+    <div class="sidebar-bottom d-flex flex-column">
+        <div class="d-flex flex-row align-items-center mb-3 ms-3 nav-link">
+            <SVGFlag CountryCode="DE" FlagType="FlagType.Square" Width="40" Height="40" style="border-radius: 50%"></SVGFlag>
+            <span class="label @CollapseLabelCssClass">Deutsch</span>
+        </div>
+        <div class="d-flex flex-row align-items-center mb-3 ms-3 nav-link">
+            <SVGFlag CountryCode="GB" FlagType="FlagType.Square" Width="40" Height="40" style="border-radius: 50%"></SVGFlag>
+            <span class="label @CollapseLabelCssClass">English</span>
+        </div>
+        <div class="d-flex flex-row align-items-center mb-3 ms-3 nav-link">
+            <SVGFlag CountryCode="IT" FlagType="FlagType.Square" Width="40" Height="40" style="border-radius: 50%"></SVGFlag>
+            <span class="label @CollapseLabelCssClass">Italiano</span>
+        </div>        
+        <div class="d-flex flex-row align-items-center mb-3 ms-3 nav-link">
+            <SVGFlag CountryCode="NL" FlagType="FlagType.Square" Width="40" Height="40" style="border-radius: 50%"></SVGFlag>
+            <span class="label @CollapseLabelCssClass">Nederlands</span>
+        </div>
     </div>
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
 @code {
-    private bool collapseNavMenu = true;
+    private bool collapseNavMenu = false;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string? CollapseIconCssClass => collapseNavMenu ? "keyboard_double_arrow_right" : "keyboard_double_arrow_left";
+    private string? CollapseLabelCssClass => collapseNavMenu ? "d-none" : null;
+    private string? NavMenuCssClass => collapseNavMenu ? "collapsed" : null;
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    public void NavigateToHome()
+    {
+        NavigationManager.NavigateTo("/");
     }
 }
