--- a/checkin4you/Client/_Imports.razor
+++ b/checkin4you/Client/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using checkin4you.Client
 @using checkin4you.Client.Shared
+
+@using Radzen
+@using Radzen.Blazor
+@using PSC.Blazor.Components.Icons
