--- a/checkin4you/Client/Shared/MainLayout.razor.css
+++ b/checkin4you/Client/Shared/MainLayout.razor.css
@@ -1,15 +1,10 @@
 .page {
-    position: relative;
     display: flex;
     flex-direction: column;
 }
 
 main {
-    flex: 1;
-}
-
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    flex: auto;
 }
 
 .top-row {
@@ -78,4 +73,8 @@ main {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
+}
+
+.vl {
+    border-right: 5px solid #40A535;
 }
