--- a/checkin4you/Client/Shared/NavMenu.razor.css
+++ b/checkin4you/Client/Shared/NavMenu.razor.css
@@ -1,62 +1,25 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+.sidebar {
+    position: relative;
+    height: 100vh;
+    background-color: rgb(30, 30, 30);
+    width: 250px;
+    transition: width 500ms;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+.sidebar-bottom {
+    position: absolute;
+    bottom: 0;
 }
 
-.navbar-brand {
-    font-size: 1.1rem;
-}
-
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
-
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
+.label {
     color: white;
+    margin-left: 1rem;
 }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
+.collapsed {
+    width: 4.5rem;
 }
 
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
+.nav-link:hover {
+    cursor: pointer;
 }
