--- a/checkin4you/Client/wwwroot/css/app.css
+++ b/checkin4you/Client/wwwroot/css/app.css
@@ -1,7 +1,11 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@font-face {
+    src: url('../fonts/Mulish-Regular.ttf') format('truetype');
+    font-family: Mulish;
+}
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Mulish, sans-serif !important;
 }
 
 h1:focus {
@@ -62,3 +66,7 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.red {
+    background-color: #9e2b25;
+}
