--- a/checkin4you/Client/Pages/HomePage.razor
+++ b/checkin4you/Client/Pages/HomePage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @page "/home"
 
-<PageTitle>Herzlich willkommen!</PageTitle>
+<PageTitle>checkin4you</PageTitle>
 
 <div class="d-flex flex-column p-5 vh-100">
     <div class="h-75 d-flex flex-column align-items-center justify-content-center">
@@ -11,7 +11,7 @@
     </div>
     <div class="h-25 d-flex justify-content-center">
         <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%;"
-                      Click="@NavigateToCheckin">
+                      Click="@NavigateToCheckinPage">
             Jetzt einchecken!
         </RadzenButton>
     </div>
