--- a/checkin4you/Client/Shared/NavMenu.razor
+++ b/checkin4you/Client/Shared/NavMenu.razor
@@ -43,7 +43,7 @@
 </div>
 
 @code {
-    private bool collapseNavMenu = false;
+    private bool collapseNavMenu = true;
 
     private string? CollapseIconCssClass => collapseNavMenu ? "keyboard_double_arrow_right" : "keyboard_double_arrow_left";
     private string? CollapseLabelCssClass => collapseNavMenu ? "d-none" : null;
