--- a/checkin4you/Client/Pages/HomePage.razor
+++ b/checkin4you/Client/Pages/HomePage.razor
@@ -3,11 +3,10 @@
 
 <PageTitle>checkin4you</PageTitle>
 
-<div class="d-flex flex-column p-5 vh-100">
-    <div class="h-75 d-flex flex-column align-items-center justify-content-center">
+<div class="d-flex flex-column p-5 vh-100 bg">
+    <div class="h-75 d-flex flex-column align-items-center justify-content-center text-white fw-bold">
         <h1>Herzlich willkommen!</h1>
-        <h1>Ristorante Pizzeria Pension</h1>
-        <RadzenImage Path="images/logo.png" />
+        <RadzenImage Path="images/logo.png" Style="width: 50%; height: 70%" />
     </div>
     <div class="h-25 d-flex justify-content-center">
         <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%;"
