--- a/checkin4you/Client/Pages/HomePage.razor
+++ b/checkin4you/Client/Pages/HomePage.razor
@@ -6,7 +6,7 @@
 <div class="d-flex flex-column p-5 vh-100 bg">
     <div class="h-75 d-flex flex-column align-items-center justify-content-center text-white fw-bold">
         <h1>Herzlich willkommen!</h1>
-        <RadzenImage Path="images/logo.png" Style="width: 50%; height: 70%" />
+        <RadzenImage Path="images/logo.png" Style="width: 800px; height: 500px" />
     </div>
     <div class="h-25 d-flex justify-content-center">
         <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%;"
