--- a/checkin4you/Client/Pages/WithReservationPage.razor
+++ b/checkin4you/Client/Pages/WithReservationPage.razor
@@ -38,32 +38,38 @@
                                 </RadzenButton>
                             </div>
                             <div>
-                                <RadzenButton Style="background-color: #40A535; height: 100%">
+                                <RadzenButton Style="background-color: #40A535; height: 100%" Click="@TryCheckIn">
                                     Jetzt einchecken!
                                 </RadzenButton>
                             </div>
                         }        
                     </div>
+                    @if(ShowInvalidMessage)
+                    {
+                        <div class="mt-4">
+                            <h1 style="color: red; text-align:center">Bitte alle benötigten Felder ausfüllen!</h1>
+                        </div>
+                    }
                                               
                     @if(Reservation.Guests != null && Reservation.Guests.Count() > 0)
                     {
                         <h4>Hauptgast</h4>
                         <div class="d-flex flex-column w-100 mb-4">
                             <div class="d-flex w-100 mb-2">
-                                <RadzenTextBox Value="@Reservation.Guests.First().Name1" Placeholder="Name" class="me-2 w-50" ReadOnly="true" />
-                                <RadzenTextBox Value="@Reservation.Guests.First().Name2" Placeholder="Vorname" class="w-50" ReadOnly="true" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name1" Placeholder="Name*" class="me-2 w-50" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name2" Placeholder="Vorname*" class="w-50" />
                             </div>
                             <div class="d-flex w-100">
-                                <RadzenTextBox Value="@Reservation.Guests.First().Street" Placeholder="Adresse" class="w-100 mb-2" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Street" Placeholder="Adresse*" class="w-100 mb-2" />
                             </div>
                             <div class="d-flex w-100 mb-2">
-                                <RadzenTextBox Value="@Reservation.Guests.First().ZipCode" Placeholder="Postleitzahl" class="me-2" Style="width: 33.3%" />
-                                <RadzenTextBox Value="@Reservation.Guests.First().CityName" Placeholder="Stadt" class="me-2" Style="width: 33.3%" />
-                                <RadzenTextBox Value="@Reservation.Guests.First().StateName" Placeholder="Land" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().ZipCode" Placeholder="Postleitzahl*" class="me-2" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().CityName" Placeholder="Stadt*" class="me-2" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().StateName" Placeholder="Land*" Style="width: 33.3%" />
                             </div>
                             <div class="d-flex w-100">
-                                <RadzenDatePicker TValue="DateTime" Value="@Reservation.Guests.First().Birthdate.Value" Placeholder="Geburtsdatum" class="w-50 me-2" DateFormat="dd.MM.yyyy" />
-                                <RadzenTextBox Value="@Reservation.Guests.First().Email" Placeholder="E-Mail (optional)" class="w-50" />
+                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Geburtsdatum*" class="w-50 me-2" DateFormat="dd.MM.yyyy" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Email" Placeholder="E-Mail" class="w-50" />
                             </div>
                         </div>
                         <h4>Mitreisende</h4>
@@ -71,9 +77,9 @@
                         {
                             <div class="d-flex">
                                 <div class="d-flex w-100 mb-2">
-                                    <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Name" class="me-2" Style="width: 33.3%" />
-                                    <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Vorname" class="me-2" Style="width: 33.3%" />
-                                    <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geburtsdatum" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
+                                    <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Name*" class="me-2" Style="width: 33.3%" />
+                                    <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Vorname*" class="me-2" Style="width: 33.3%" />
+                                    <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geburtsdatum*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
                                 </div>
                             </div>
                         }
@@ -93,9 +99,13 @@
             }
             <div class="@DisplayNoneCssClass mt-4">
                 <RadzenButton Style="background-color: #9e2b25; height: 100%; width: 100%" Click="@Cancel" class="p-4">
-                    Zurück zur Startseite
+                    Zurück zur Startseite!
                 </RadzenButton>
             </div>
+            @if (ReservationsLoaded)
+            {
+                <span class="mt-2">Pflichtfelder sind mit einem * markiert.</span>
+            }
         </div>
         
         <div class="@DisplayNoneCssClass">
