--- a/checkin4you/Client/Pages/WithoutReservationPage.razor
+++ b/checkin4you/Client/Pages/WithoutReservationPage.razor
@@ -1,3 +1,117 @@
 ﻿@page "/checkin/withoutReservation"
 
-<h3>WithoutReservationPage</h3>
+<div class="d-flex flex-column p-4 vh-100 w-100" style="overflow: auto">
+    <div class="d-flex">
+        <div class="d-flex flex-column w-100 @((Reservation != null && Reservation.Idreservations != null && Reservation.Idreservations.Any()) ? "" : "me-4")">
+            <div class="@DisplayNoneCssClass">
+                <RadzenCard class="w-100" Style="background-color: #40A535; color: white; height: fit-content;">
+                    <div class="d-flex flex-column align-items-start justify-content-center">
+                        <h1>Bitte geben Sie den vollständigen Namen ein auf den die Reservierung lautet!</h1>
+                        <RadzenTextBox Placeholder="Vollständiger Name..."
+                                       @oninput="@(args => OnGuestNameInput(args.Value.ToString()))"
+                                       class="w-100"
+                                       id="guestName" />
+                    </div>
+                </RadzenCard>
+                @if(ShowSpinner)
+                {
+                    <div class="d-flex w-100 align-items-center justify-content-center mt-4">
+                        <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status"></div>
+                    </div>
+                }
+            </div>
+            @if(Reservation != null && Reservation.Idreservations != null && Reservation.Idreservations.Any())
+            {
+                <RadzenCard class="w-100">
+                    <div class="d-flex">
+                        <div>
+                            <h2>Bitte überprüfen und vervollständigen Sie Ihre Daten!</h2>
+                            <h4>Buchungsnummer @Reservation.ExternalResIds.First()</h4>
+                            <h4>Aufenthalt von @Reservation.ArrivalDate?.ToString("dd.MM.yyyy") bis @Reservation.DepartureDate?.ToString("dd.MM.yyyy")</h4>  
+                        </div>
+                        @if(ReservationsLoaded && Reservation != null)
+                        {
+                            <div class="ms-auto" />
+                            <div class="me-4">
+                                <RadzenButton Style="background-color: #9e2b25; height: 100%" Click="@Cancel">
+                                    Abbrechen
+                                </RadzenButton>
+                            </div>
+                            <div>
+                                <RadzenButton Style="background-color: #40A535; height: 100%" Click="@TryCheckIn">
+                                    Jetzt einchecken!
+                                </RadzenButton>
+                            </div>
+                        }        
+                    </div>
+                    @if(ShowInvalidMessage)
+                    {
+                        <div class="mt-4">
+                            <h1 style="color: red; text-align:center">Bitte alle benötigten Felder ausfüllen!</h1>
+                        </div>
+                    }
+                                              
+                    @if(Reservation.Guests != null && Reservation.Guests.Count() > 0)
+                    {
+                        <h4>Hauptgast</h4>
+                        <div class="d-flex flex-column w-100 mb-4">
+                            <div class="d-flex w-100 mb-2">
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name1" Placeholder="Name*" class="me-2 w-50" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name2" Placeholder="Vorname*" class="w-50" />
+                            </div>
+                            <div class="d-flex w-100">
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Street" Placeholder="Adresse*" class="w-100 mb-2" />
+                            </div>
+                            <div class="d-flex w-100 mb-2">
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().ZipCode" Placeholder="Postleitzahl*" class="me-2" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().CityName" Placeholder="Stadt*" class="me-2" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().StateName" Placeholder="Land*" Style="width: 33.3%" />
+                            </div>
+                            <div class="d-flex w-100">
+                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Geburtsdatum*" class="w-50 me-2" DateFormat="dd.MM.yyyy" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Email" Placeholder="E-Mail" class="w-50" />
+                            </div>
+                        </div>
+                        <h4>Mitreisende</h4>
+                        @foreach(var guest in Reservation.Guests.Skip(1))
+                        {
+                            <div class="d-flex">
+                                <div class="d-flex w-100 mb-2">
+                                    <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Name*" class="me-2" Style="width: 33.3%" />
+                                    <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Vorname*" class="me-2" Style="width: 33.3%" />
+                                    <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geburtsdatum*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
+                                </div>
+                            </div>
+                        }
+                        <RadzenButton Style="background-color: #1e1e1e"
+                                        Click="@AddGuest">
+                            Mitreisenden hinzufügen
+                        </RadzenButton>
+                    }
+                </RadzenCard>
+            }
+            @if(ReservationsLoaded && (Reservation == null || Reservation.Idreservations == null || !Reservation.Idreservations.Any()))
+            {
+                <RadzenCard class="mt-4">
+                    <h1>Keine Buchung gefunden!</h1>
+                </RadzenCard>
+            }
+            <div class="d-flex @DisplayNoneCssClass mt-4">
+                <RadzenButton Style="background-color: #9e2b25; height: 100%; width: 25%" Click="@Cancel" class="p-4 me-4">
+                    Zurück zur Startseite!
+                </RadzenButton>
+                <div class="@DisplayNoneCssClass w-75">
+                    <RadzenCard>
+                        <h1>Benötigen Sie Hilfe?</h1>
+                        <span>Gerne helfen Ihnen unserer Mitarbeiter im Restaurant weiter oder Sie erreichen uns unter +43 7723 20614</span>
+                    </RadzenCard>
+                </div>
+            </div>
+            @if (ReservationsLoaded && Reservation != null)
+            {
+                <span class="mt-2">Pflichtfelder sind mit einem * markiert.</span>
+            }
+        </div>
+    </div>
+</div>
+
