--- a/checkin4you/Client/Pages/WithoutReservationPage.razor
+++ b/checkin4you/Client/Pages/WithoutReservationPage.razor
@@ -6,8 +6,8 @@
             <div class="@DisplayNoneCssClass">
                 <RadzenCard class="w-100" Style="background-color: #40A535; color: white; height: fit-content;">
                     <div class="d-flex flex-column align-items-start justify-content-center">
-                        <h1>Bitte geben Sie den vollständigen Namen ein auf den die Reservierung lautet!</h1>
-                        <RadzenTextBox Placeholder="Vollständiger Name..."
+                        <h1>Bitte geben Sie den Namen ein auf den die Reservierung lautet!</h1>
+                        <RadzenTextBox Placeholder="Name..."
                                        @oninput="@(args => OnGuestNameInput(args.Value.ToString()))"
                                        class="w-100"
                                        id="guestName" />
@@ -26,7 +26,10 @@
                     <div class="d-flex">
                         <div>
                             <h2>Bitte überprüfen und vervollständigen Sie Ihre Daten!</h2>
-                            <h4>Buchungsnummer @Reservation.ExternalResIds.First()</h4>
+                            @if(Reservation.ExternalResIds != null && Reservation.ExternalResIds.Any())
+                            {
+                                <h4>Buchungsnummer @Reservation.ExternalResIds.First()</h4>
+                            }
                             <h4>Aufenthalt von @Reservation.ArrivalDate?.ToString("dd.MM.yyyy") bis @Reservation.DepartureDate?.ToString("dd.MM.yyyy")</h4>  
                         </div>
                         @if(ReservationsLoaded && Reservation != null)
@@ -68,8 +71,9 @@
                                 <RadzenTextBox @bind-Value="@Reservation.Guests.First().StateName" Placeholder="Land*" Style="width: 33.3%" />
                             </div>
                             <div class="d-flex w-100">
-                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Geburtsdatum*" class="w-50 me-2" DateFormat="dd.MM.yyyy" />
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Email" Placeholder="E-Mail" class="w-50" />
+                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Geburtsdatum*" class="me-2" DateFormat="dd.MM.yyyy" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Phone" Placeholder="Telefonnummer*" class="me-2" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Email" Placeholder="E-Mail" Style="width: 33.3%" />
                             </div>
                         </div>
                         <h4>Mitreisende</h4>
@@ -103,7 +107,7 @@
                         <h1>Benötigen Sie Hilfe?</h1>
                         <span>Gerne helfen Ihnen unserer Mitarbeiter im Restaurant weiter oder Sie erreichen uns unter +43 7723 20614</span>
                     </RadzenCard>
-                    <RadzenButton Style="background-color: #9e2b25; height: 100%; width: 25%" Click="@Cancel" class="p-4 w-25 h-100">
+                    <RadzenButton Style="background-color: #1e1e1e; height: 100%; width: 25%" Click="@Cancel" class="p-4 w-25 h-100">
                         Zurück zur Startseite!
                     </RadzenButton>
                 </div>
