--- a/checkin4you/Client/Pages/CheckedInPage.razor
+++ b/checkin4you/Client/Pages/CheckedInPage.razor
@@ -1,7 +1,26 @@
 ﻿@page "/checkedIn"
 
-@foreach(var room in Rooms) {
-    <div class="d-flex flex-column">
-        <span>@room</span>
+<div class="d-flex flex-column w-100 h-100">
+    <div class="d-flex w-100 h-50">
+        <div class="w-50 p-4">
+            @foreach(var room in Rooms)
+            {
+                @room
+            }
+        </div>
+        <div class="w-50 p-4">
+            Kleiner Italiener Info
+        </div>
     </div>
-}
+    <div class="d-flex w-100 h-50">
+        <div class="w-50 p-4">
+            <video width="100%" height="100%" loop autoplay muted>
+                <source src="/videos/video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div class="w-50 p-4">
+            Checkin Info
+        </div>
+    </div>
+</div>
