--- a/checkin4you/Client/App.razor
+++ b/checkin4you/Client/App.razor
@@ -1,4 +1,8 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using checkin4you.Client.Services.States
+@inject HttpClient httpClient
+@inject ReservationStateService ReservationStateService
+
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -10,3 +14,10 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@code {
+    protected override async Task OnInitializedAsync()
+    {
+        ReservationStateService.SetCheckedInReservationIds(await httpClient.GetFromJsonAsync<List<string>>("api/reservations/GetCheckedInReservationIds"));
+    }
+}
