--- a/checkin4you/Client/Pages/CheckedInPage.razor
+++ b/checkin4you/Client/Pages/CheckedInPage.razor
@@ -1,29 +1,69 @@
 ﻿@page "/checkedIn"
 
 <div class="d-flex flex-column w-100 h-100">
-    <div class="d-flex w-100 h-50">
-        <div class="w-50 p-4">
-            <RadzenCard class="d-flex flex-column" Style="background-color: #40A535; color: white">
-                <h1>Sie haben erfolgreich eingecheckt!</h1>
+    <div class="d-flex w-100" style="height: 45%">
+        <div class="w-50 ps-4 pt-4 pe-4 pb-4">
+            <RadzenCard class="d-flex flex-column h-100" Style="background-color: #40A535; color: white">
+                <div style="font-size: 2rem" class="mb-2 w-100 text-overflow">Sie haben erfolgreich eingecheckt!</div>
                 @if (Rooms != null && Rooms.Any() && Rooms.Count == 1)
                 {
-                    <div>Ihr Zimmer ist @Rooms.First()</div>
+                    <div style="font-size: 1.5rem;" class="mb-2">Ihr Zimmer ist:</div>
+                    <div class="room-container h-100">
+                        <div class="d-flex align-items-center justify-content-center room h-100">
+                            <span>@Rooms.First()</span>
+                        </div>
+                    </div>
                 }
+                else if (Rooms != null && Rooms.Any() && Rooms.Count > 1)
+                {
+                    <div style="font-size: 1.5rem;" class="mb-2">Ihre Zimmer sind:</div>
+                    <div class="room-container">
+                        @foreach(var room in Rooms)
+                        {
+                            <div class="room">
+                                @room
+                            </div>
+                        }
+                    </div>
+                }
+                <div class="mt-auto"></div>
             </RadzenCard>
         </div>
-        <div class="w-50 p-4">
-            Kleiner Italiener Info
+        <div class="w-50 ps-0 pt-4 pe-4 pb-4">
+            <RadzenCard class="d-flex h-100" Style="background-color: #1e1e1e; color: white">
+                <h1>Wir wünschen Ihnen einen angenehmen Aufenthalt!</h1>
+                <div class="mt-auto"></div>
+                <h2>Sie haben Fragen oder möchten uns kontaktieren?</h2>
+                <span>Gerne helfen Ihnen unserer Mitarbeiter im Restaurant weiter oder Sie erreichen uns unter +43 7723 20614</span>
+            </RadzenCard>
         </div>
     </div>
-    <div class="d-flex w-100 h-50">
-        <div class="w-50 p-4">
+    <div class="d-flex w-100" style="height: 45%">
+        <div class="w-50 ps-4 pt-0 pe-4 pb-4">
             <video class="checkInVideo" loop autoplay muted>
                 <source src="/videos/video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
-        <div class="w-50 p-4">
-            Checkin Info
+        <div class="w-50 ps-0 pt-0 pe-4 pb-4">
+            <RadzenCard class="d-flex flex-column h-100" Style="background-color: #1e1e1e; color: white">
+                <div style="font-size: 2rem;" class="mb-2 text-overflow">Frühstückszeiten</div>
+                <div class="pb-2 text-overflow" style="font-size: 1.25rem">07.00 bis 11.00 Uhr</div>
+                <div style="font-size: 2rem;" class="mb-2 text-overflow">Öffnungszeiten Restaurant</div>
+                <div class="d-flex flex-column pb-2">
+                    <div style="font-size: 1.25rem">Dienstag bis Freitag </div>
+                    <p class="pb-1 text-overflow">17.00 bis 22.30 Uhr (warme Küche bis 22.00 Uhr)</p>
+                    <div style="font-size: 1.25rem">Samstag</div>
+                    <p class="pb-1 text-overflow">11.00 bis 14.00 Uhr und 17:00 bis 22:30 Uhr (warme Küche bis 22.00 Uhr)</p>
+                    <div style="font-size: 1.2rem">Sonn- und Feiertage</div>
+                    <p class="pb-1 text-overflow">11.00 bis 14.00 Uhr und 17.00 bis 22.00 Uhr (warme Küche bis 21.00 Uhr)</p>
+                </div>
+            </RadzenCard>
         </div>
+    </div>
+    <div class="d-flex w-100 align-items-center justify-content-center px-4 pb-4" style="height: 10%">
+        <RadzenButton class="w-100 h-100" Style="background-color: #1e1e1e" Click="@BackToHome">
+            Zurück zur Startseite!
+        </RadzenButton>
     </div>
 </div>
