--- a/checkin4you/Client/Pages/EN/CheckedInPageEN.razor
+++ b/checkin4you/Client/Pages/EN/CheckedInPageEN.razor
@@ -1,4 +1,4 @@
-﻿@page "/checkedIn"
+﻿@page "/en/checkedIn"
 
 <div class="d-flex flex-column w-100 h-100">
     <div class="d-flex w-100" style="height: 45%">
