--- a/checkin4you/Client/Pages/DE/CheckinPage.razor
+++ b/checkin4you/Client/Pages/DE/CheckinPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/checkin"
+@page "/de/checkin"
 
 <div class="d-flex flex-column p-5 vh-100">
     <div class="h-50 d-flex align-items-center justify-content-center">
