--- a/checkin4you/Client/Pages/EN/WithReservationPageEN.razor
+++ b/checkin4you/Client/Pages/EN/WithReservationPageEN.razor
@@ -47,7 +47,7 @@
                     @if(ShowInvalidMessage)
                     {
                         <div class="mt-4">
-                            <h1 style="color: red; text-align:center">Bitte alle benötigten Felder ausfüllen!</h1>
+                            <h1 style="color: red; text-align:center">Please fill in all required fields!</h1>
                         </div>
                     }
                                               
