--- a/checkin4you/Client/Pages/EN/WithoutReservationPageEN.razor
+++ b/checkin4you/Client/Pages/EN/WithoutReservationPageEN.razor
@@ -6,7 +6,7 @@
             <div class="@DisplayNoneCssClass">
                 <RadzenCard class="w-100" Style="background-color: #40A535; color: white; height: fit-content;">
                     <div class="d-flex flex-column align-items-start justify-content-center">
-                        <h1>Bitte geben Sie den Namen ein auf den die Reservierung lautet!</h1>
+                        <h1>Please enter the name of the reservation!</h1>
                         <RadzenTextBox Placeholder="Name..."
                                        @oninput="@(args => OnGuestNameInput(args.Value.ToString()))"
                                        class="w-100"
@@ -25,24 +25,24 @@
                 <RadzenCard class="w-100">
                     <div class="d-flex">
                         <div>
-                            <h2>Bitte überprüfen und vervollständigen Sie Ihre Daten!</h2>
+                            <h2>Please check and complete your data!</h2>
                             @if(Reservation.ExternalResIds != null && Reservation.ExternalResIds.Any())
                             {
-                                <h4>Buchungsnummer @Reservation.ExternalResIds.First()</h4>
+                                <h4>Booking number @Reservation.ExternalResIds.First()</h4>
                             }
-                            <h4>Aufenthalt von @Reservation.ArrivalDate?.ToString("dd.MM.yyyy") bis @Reservation.DepartureDate?.ToString("dd.MM.yyyy")</h4>  
+                            <h4>Visit from @Reservation.ArrivalDate?.ToString("dd.MM.yyyy") to @Reservation.DepartureDate?.ToString("dd.MM.yyyy")</h4>  
                         </div>
                         @if(ReservationsLoaded && Reservation != null)
                         {
                             <div class="ms-auto" />
                             <div class="me-4">
                                 <RadzenButton Style="background-color: #9e2b25; height: 100%" Click="@Cancel">
-                                    Abbrechen
+                                    Cancel
                                 </RadzenButton>
                             </div>
                             <div>
                                 <RadzenButton Style="background-color: #40A535; height: 100%" Click="@TryCheckIn">
-                                    Jetzt einchecken!
+                                    Check-in now!
                                 </RadzenButton>
                             </div>
                         }        
@@ -50,46 +50,46 @@
                     @if(ShowInvalidMessage)
                     {
                         <div class="mt-4">
-                            <h1 style="color: red; text-align:center">Bitte alle benötigten Felder ausfüllen!</h1>
+                            <h1 style="color: red; text-align:center">Please fill in all required fields!</h1>
                         </div>
                     }
                                               
                     @if(Reservation.Guests != null && Reservation.Guests.Count() > 0)
                     {
-                        <h4>Hauptgast</h4>
+                        <h4>Main guest</h4>
                         <div class="d-flex flex-column w-100 mb-4">
                             <div class="d-flex w-100 mb-2">
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name1" Placeholder="Name*" class="me-2 w-50" />
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name2" Placeholder="Vorname*" class="w-50" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name1" Placeholder="Surname*" class="me-2 w-50" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Name2" Placeholder="Name*" class="w-50" />
                             </div>
                             <div class="d-flex w-100">
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Street" Placeholder="Adresse*" class="w-100 mb-2" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Street" Placeholder="Address*" class="w-100 mb-2" />
                             </div>
                             <div class="d-flex w-100 mb-2">
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().ZipCode" Placeholder="Postleitzahl*" class="me-2" Style="width: 33.3%" />
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().CityName" Placeholder="Stadt*" class="me-2" Style="width: 33.3%" />
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().StateName" Placeholder="Land*" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().ZipCode" Placeholder="Postal code*" class="me-2" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().CityName" Placeholder="City*" class="me-2" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().StateName" Placeholder="State*" Style="width: 33.3%" />
                             </div>
                             <div class="d-flex w-100">
-                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Geburtsdatum*" class="me-2" DateFormat="dd.MM.yyyy" Style="width: 33.3%" />
-                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Phone" Placeholder="Telefonnummer*" class="me-2" Style="width: 33.3%" />
+                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Birthdate*" class="me-2" DateFormat="dd.MM.yyyy" Style="width: 33.3%" />
+                                <RadzenTextBox @bind-Value="@Reservation.Guests.First().Phone" Placeholder="Phone number*" class="me-2" Style="width: 33.3%" />
                                 <RadzenTextBox @bind-Value="@Reservation.Guests.First().Email" Placeholder="E-Mail" Style="width: 33.3%" />
                             </div>
                         </div>
-                        <h4>Mitreisende</h4>
+                        <h4>Additional guests</h4>
                         @foreach(var guest in Reservation.Guests.Skip(1))
                         {
                             <div class="d-flex">
                                 <div class="d-flex w-100 mb-2">
-                                    <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Name*" class="me-2" Style="width: 33.3%" />
-                                    <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Vorname*" class="me-2" Style="width: 33.3%" />
-                                    <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geburtsdatum*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
+                                    <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Surname*" class="me-2" Style="width: 33.3%" />
+                                    <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Name*" class="me-2" Style="width: 33.3%" />
+                                    <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Birthdate*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
                                 </div>
                             </div>
                         }
                         <RadzenButton Style="background-color: #1e1e1e"
                                         Click="@AddGuest">
-                            Mitreisenden hinzufügen
+                            Add guest
                         </RadzenButton>
                     }
                 </RadzenCard>
@@ -97,25 +97,25 @@
             @if(ReservationsLoaded && (Reservation == null || Reservation.Idreservations == null || !Reservation.Idreservations.Any()))
             {
                 <RadzenCard class="mt-4">
-                    <h1>Keine Buchung gefunden!</h1>
+                    <h1>No reservation found!</h1>
                 </RadzenCard>
             }
             <div class="d-flex @DisplayNoneCssClass mt-4">
                 
                 <div class="d-flex w-100 @DisplayNoneCssClass">
                     <RadzenCard class="w-75 me-4">
-                        <h1>Benötigen Sie Hilfe?</h1>
-                        <span>Gerne helfen Ihnen unserer Mitarbeiter im Restaurant weiter oder Sie erreichen uns unter +43 7723 20614</span>
+                        <h1>Do you need help?</h1>
+                        <span>Our staff in the restaurant will be happy to help you, or you can reach us on +43 7723 20614</span>
                     </RadzenCard>
                     <RadzenButton Style="background-color: #1e1e1e; height: 100%; width: 25%" Click="@Cancel" class="p-4 w-25 h-100">
-                        Zurück zur Startseite!
+                        Back to home page!
                     </RadzenButton>
                 </div>
                 
             </div>
             @if (ReservationsLoaded && Reservation != null)
             {
-                <span class="mt-2">Pflichtfelder sind mit einem * markiert.</span>
+                <span class="mt-2">Required fields are marked with an *.</span>
             }
         </div>
     </div>
